[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RPG"
version = "0.0.1"
authors = [ 
    {name= "Joey Williams", email="jwilli41@rams.shepherd.edu"}
]
description = "A short choose your own adventure game."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sys", "QApplication", "QWidget", "QLabel", "QPushButton", "QLineEdit", "QVBoxLayout", "QPixmap"
]
[project.urls]
Homepage = "https://github.com/Jnwilli206/AdvCompPython"